cambio en el tema de la aplicación
se cambio el tema de la aplicación a color rojo con acentuaciónes en amarillo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Actividades.MainActivity"></activity>
+        android:theme="@style/abono">
+        <activity android:name=".Actividades.MainActivity"
+            android:theme="@style/abono"></activity>
         <activity android:name=".Actividades.Registro" />
         <activity
             android:name=".Actividades.InicioActivity"
             android:label="@string/title_activity_inicio"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/abono">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
