--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,25 @@
             android:name=".Actividades.MainActivity"
             android:theme="@style/abono" />
         <activity android:name=".Actividades.Registro" />
+
         <activity
             android:name=".Actividades.InicioActivity"
             android:label="@string/title_activity_inicio"
             android:theme="@style/abono">
-
-        </activity>
-        <activity android:name=".Actividades.Spashscreen" android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+         </activity>
+
+        <activity
+            android:name=".Actividades.Spashscreen"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+
+        </activity>
+
+        <activity android:name=".Actividades.AgregarActivity">
         </activity>
     </application>
 
