--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_background"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_background"
         android:supportsRtl="true"
         android:theme="@style/abono">
         <activity
@@ -33,7 +33,13 @@
 
         </activity>
 
-        <activity android:name=".Actividades.AgregarActivity">
+        <activity
+            android:name=".Actividades.AgregarActivity"
+            android:parentActivityName=".Actividades.InicioActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Actividades.InicioActivity" />
         </activity>
     </application>
 
